log-output/manifests/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: default
  labels:
    app: log-output
spec:
  selector:
    matchLabels:
      app: log-output
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: log-output
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: rahuldesar/log-output
          imagePullPolicy: IfNotPresent
